<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".Questionaire">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:text="@string/Question1" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes_no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:text="@string/Question1a" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes_no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:text="@string/Question2" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes_no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:text="@string/Question3" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes_no" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:text="@string/Question4" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes_no" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:text="@string/Question5" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes_no" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:text="@string/Question7" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes_no" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:text="@string/Question7" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes_no" />
    </LinearLayout>





</LinearLayout>